--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ clap = { version = "4.1.6", features = ["derive"] }
 hex = "0.4.3"
 ignore = "0.4.20"
 itertools = "0.10.5"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.93"
 sha2 = "0.10.6"
