--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,12 @@ clap = { version = "4.1.6", features = ["derive"] }
 hex = "0.4.3"
 ignore = "0.4.20"
 itertools = "0.10.5"
+rayon = "1.6.1"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 sha2 = "0.10.6"
+
+[profile.release]
+debug = true
+lto = "thin"
+opt-level = 2
