--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
+globset = "0.4.10"
 hex = "0.4.3"
 ignore = "0.4.20"
 itertools = "0.10.5"
