--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "cpd"
+description = "Copy/Paste detection for source code"
+readme = "README.md"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "Apache-2.0"
 
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
@@ -17,6 +18,5 @@ serde_json = "1.0.93"
 sha2 = "0.10.6"
 
 [profile.release]
-debug = true
 lto = "thin"
 opt-level = 2
